--- a/index.html
+++ b/index.html
@@ -7,28 +7,32 @@
 <body style="background:#ffffff; margin-top:0; margin-bottom:0; padding-top:0; padding-bottom:0;">
 
 <!-- WRAPPER-->
-<table style="border-collapse:collapse;border-spacing:0;margin:0px auto;width:550px">
+<table style="font-family:Tahoma,sans-serif;border-collapse:collapse;border-spacing:0;margin:10px auto;width:525px;height:735px;border-style:dashed;border-width:1px;border-color:#8DC63F">
   <tr>
-  <th style="padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top" colspan="2"><img src="logo.png"></th>
+  <th style="paddin:0px;vertical-align:top" colspan="2"><img src="logo.png" alt="Glowny obraz" title="Glowny obraz" width="525px" border="0"></th>
 
   </tr>
   <tr>
-    <td style="font-family:Tahoma, sans-serif;font-size:25px;font-weight:bold;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top" colspan="2">
-      <span style="color:green">WYKOŃCZENIE MIESZKANIA<br> I KUCHNIA</span> W PREZENCIE!
+    <td style="font-size:28.27px;font-weight:bold;vertical-align:top;padding-left:10px;" colspan="2">
+      <span style="color:#8DC63F">WYKOŃCZENIE MIESZKANIA<br> I KUCHNIA</span> <span style="color:#545353">W PREZENCIE!</span>
     </td>
   </tr>
   <tr>
-    <td style="font-family:Tahoma, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top"></td>
-    <td style="padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top; width:275px;">
-      <img src="pieczec.png">
+    <td style="vertical-align:top;width:260px;padding-left:10px;">
+      <span style="font-size:19.4px;font-weight:bold;color:#545353">Cena juz od</span> <br><span style="font-size:31.05px;font-weight:bold;color:#8DC63F;">4600zł/m2</span><br><span style="font-size:19.4px"> na wybrane</span><br><span style="font-size:31.05px;font-weight:bold;color:#8DC63F;">MIESZKANIA!</span>
     </td>
-  </tr>
-  <tr><td style="font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top" colspan="2">
+    <td style="vertical-align:top; width:260px;padding-left:10px;">
+      <img src="pieczec.png" alt="pieczec" title="pieczec" border="0">
     </td>
   </tr>
   <tr>
-    <td style="padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top;" colspan="2">
-      <img src="button.png">
+    <td style="vertical-align:top;padding-left:10px;" colspan="2">
+    <span style="font-size:25px;">Dzień Otwarty</span><br><span style="font-size:36px;font-weight:bold;color:#8DC63F">SOBOTA 10 SIERPNIA</span><br>w <span style="font-size:20px;">godzinach od 9:00 do 15:00<br> ul. Chmurkowa, Warszawa</span>
+    </td>
+  </tr>
+  <tr>
+    <td style="vertical-align:top;padding-left:10px;" colspan="2"><center>
+      <a href="http://google.pl" title="link_title" target="_blank"><img src="button.png" alt="button" title="button_title"></center></a>
     </td>
   </tr>
 
